--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,9 @@
 .justify-end{
     justify-content: flex-end;
 }
+.justify-between{
+    justify-content: space-between;
+}
 .align-center{
     align-items: center;
 }
@@ -33,6 +36,8 @@
     border-radius: 8px;
     color: #FFFFFF;
     border: none;
+    font-size: 20px;
+    font-weight: 600;
 }
 .btn-secondary{
     background-color: #FFFFFF;
@@ -44,7 +49,14 @@
     line-height: 23px;
     font-weight: 600;
 }
-
+.section-heading{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.92px;
+    color: #151414;
+    text-align: center;
+    padding: 1rem 0 60px;
+}
 /* Main Styles */
 #header{
     background: url(../images/banner/banner3.png) no-repeat ;
@@ -75,9 +87,129 @@
     display: block;
     margin-left: auto;
 }
-.backstory{
+    /* Backstory section */
+#backstory{
     gap: 87px;
+    padding: 130px 0 0px ;
 }
 .backstory-img img{
-    width: 100%;
+    width: 80%;
 }
+.backstory-title,.section-heading{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    margin-bottom: 1.5rem;
+}
+.backstory-description{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 23px;
+    text-align: left;
+    margin-bottom: 1rem;
+    color: #444343;
+}
+.backstory-list{
+    list-style: none;
+}
+.backstory-list li{
+    margin-bottom: 0.5rem;
+    color: #444343;
+}
+.backstory-list li i{
+    color: #16D887;
+}
+    /* Plans Section */
+#plans{
+    padding: 4.5rem 0 8.5rem;
+}
+.all-plans h3,p{
+    text-align: center;
+}
+.all-plans h3{
+    font-size: 30px;
+    line-height: 35px;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.all-plans p{
+    font-size: 25px;
+    line-height: 29px;
+    font-weight: 500;
+    color: #737272;
+}
+.plan-img{
+    margin-bottom: 1.5rem;
+}
+    /* Call to Action section */
+#call-to-action{
+    background-image: linear-gradient(to right,#005FAC, #005FAC00), url(../images/watch.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 59px 64px;
+    margin-bottom: 130px;
+    border-radius: 8px;
+}
+#call-to-action div{
+    width: 50%;
+}
+#call-to-action h2{
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+}
+/* Footer Styles */
+footer{
+    padding: 130px 0;
+    background-color: #151414;
+}
+footer .contact-info-wrapper{
+    gap: 250px;
+}
+footer h2,p{
+    text-align: left;
+}
+.contact-description h2{
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 53px;
+    color: #F8F8F8;
+    margin-bottom: 1rem;
+}
+.contact-form h2{
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    color: #F8F8F8;
+    margin-bottom: 1rem;
+}
+.contact-description p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+.contact-description p:first-of-type{
+    margin-bottom: 24px;
+}
+.contact-description .socials ul{
+    list-style: none;
+    gap: 20px;
+    padding-top: 1rem;
+}
+.contact-form input[type=email]{
+    width: 100%;
+    padding: 22px;
+    border-radius: 6px;
+    margin-bottom: 16px;
+    outline: none;
+    border: none;
+}
+
+
+
+
+
